--- a/1automatization-excel-word/2 pandas importacion de excel.ipynb
+++ b/1automatization-excel-word/2 pandas importacion de excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "75935941",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "1ee4ec9f",
    "metadata": {},
    "outputs": [],
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "e1aeeeb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(r'/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/2iris_dataset.csv',delimiter=\",\",encoding=\"ISO-8859-1\")"
+    "df=pd.read_csv(r'./files/2iris_dataset.csv',delimiter=\",\",encoding=\"ISO-8859-1\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "62ce9772",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "4  Iris-setosa  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "2cdd2e09",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "724b06ad",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
        "4  Iris-setosa    40.715041  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "e9ede1c1",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "'Guardar archivo'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "fa8cdcd6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel(\"/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/2iris_dataset.xlsx\",sheet_name=\"Iris_mod\")"
+    "df.to_excel(\"./files/2iris_dataset.xlsx\",sheet_name=\"Iris_mod\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "8f11e9ac",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "'Otro excel'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,17 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "e4372e28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=pd.read_excel(\"/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/1Distrito_poblacion.xlsx\",sheet_name=\"figuras\")"
+    "df2=pd.read_excel(\"./files/1Distrito_poblacion.xlsx\",sheet_name=\"figuras\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "4e7c48c0",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
        "4    12     34  1281.769803"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "4de81064",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "16a9aaf2",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>lado</th>\n",
        "      <th>radio</th>\n",
        "      <th>area</th>\n",
@@ -447,14 +446,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>5</td>\n",
        "      <td>31.415927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>8</td>\n",
        "      <td>75.398224</td>\n",
@@ -462,20 +459,17 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>4</td>\n",
        "      <td>25.132741</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>10</td>\n",
        "      <td>56</td>\n",
        "      <td>1759.291886</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>12</td>\n",
        "      <td>34</td>\n",
        "      <td>1281.769803</td>\n",
@@ -485,15 +479,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  lado  radio         area\n",
-       "0           0     2      5    31.415927\n",
-       "1           1     3      8    75.398224\n",
-       "2           2     2      4    25.132741\n",
-       "3           3    10     56  1759.291886\n",
-       "4           4    12     34  1281.769803"
+       "   lado  radio         area\n",
+       "0     2      5    31.415927\n",
+       "1     3      8    75.398224\n",
+       "2     2      4    25.132741\n",
+       "3    10     56  1759.291886\n",
+       "4    12     34  1281.769803"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,21 +498,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "bf38852d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_excel(\"/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/1Distrito_poblacion.xlsx\",sheet_name=\"figuras\")"
+    "df2.to_excel(\"./files/1Distrito_poblacion.xlsx\",sheet_name=\"figuras\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60f5550f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -537,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
