adding the sckitlearn, openxl, install again the libraries

--- a/1automatization-excel-word/1lectura-escritura-excel.ipynb
+++ b/1automatization-excel-word/1lectura-escritura-excel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "74095266",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "cdd29180",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "'Lectura de ficheros excel'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,27 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "a687a7d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "libro=openpyxl.load_workbook(\"/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/1Distrito_poblacion.xlsx\")"
+    "libro=openpyxl.load_workbook(\"./files/2iris_dataset.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "d7d89693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Distrito_poblacion', 'figuras']"
+       "['Iris_mod']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,27 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "f2fb0905",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheet=libro[\"Distrito_poblacion\"]"
+    "sheet=libro[\"Iris_mod\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "550f3926",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'DISTRITO'"
+       "'num'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,28 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "e52b543f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Huila'"
+       "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sheet.cell(row=2,column=1).value"
+    "sheet.cell(row=5,column=1).value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "id": "dc5989a9",
    "metadata": {},
    "outputs": [
@@ -124,22 +124,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DISTRITO:Población_Distrito\n",
-      "Huila:151965\n",
-      "Tolima:149718\n",
-      "Cundinamarca:137401\n",
-      "Putumayo:116903\n"
+      "longitud_sépalo       anchura_sépalo\n",
+      "5.1      3.5\n",
+      "4.9      3\n",
+      "4.7      3.2\n",
+      "4.6      3.1\n",
+      "5      3.6\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1,6):\n",
-    "    print(sheet.cell(row=i,column=1).value+':'+str(sheet.cell(row=i,column=2).value))"
+    "for i in range(1,7):\n",
+    "    value = sheet.cell(row=i, column=2).value\n",
+    "    value2 = sheet.cell(row=i, column=3).value\n",
+    "    print(str(value) + \"      \"+str(value2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "id": "b416e95b",
    "metadata": {},
    "outputs": [
@@ -149,7 +152,7 @@
        "'escritura de archivos'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,27 +163,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "id": "7066c900",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheet[\"a2\"]=\"Huila\""
+    "sheet[\"h1\"]=\"Resultado\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "id": "b17d310e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheet[\"c2\"]=\"Top 5\""
+    "sheet[\"h2\"]=sheet.cell(row=2,column=2).value*sheet.cell(row=2,column=3).value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "id": "940a48a8",
    "metadata": {},
    "outputs": [],
@@ -190,12 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "id": "cb9d7987",
    "metadata": {},
    "outputs": [],
    "source": [
-    "libro.save(\"/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/1Distrito_poblacion.xlsx\")"
+    "libro.save(\"./files/2iris_dataset_modified.xlsx\")"
    ]
   },
   {
@@ -223,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
