--- a/1automatization-excel-word/3 lectura de ficheros word(creacion, edicion, lectura).ipynb
+++ b/1automatization-excel-word/3 lectura de ficheros word(creacion, edicion, lectura).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "8686e92c",
    "metadata": {},
    "outputs": [],
@@ -12,27 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ea552ffc",
+   "execution_count": 10,
+   "id": "5568e9f4-fea7-46ba-aaa3-e1f305142e45",
    "metadata": {},
    "outputs": [],
    "source": [
-    " d=docx.Document(\"/Users/jdvpl/Documents/ipa/ipa/1automatization-excel-word/files/3Documento tecnologías emergentes.docx\")"
+    "d=docx.Document(r'./files/3Documento tecnologías emergentes.docx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "7e131345",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'“Que la tecnología ha cambiado nuestra manera de vivir e interactuar es un hecho. Sin embargo, aún no somos conscientes de las potencialidades de usos de las tecnologías.Por ejemplo, para el año 2025 se espera una verdadera revolución tecnológica, sobre todo enfocado en el\\xa0sector bio-médico\\xa0pero también en las relaciones humanas entre individuos a distancia, en la protección del medio ambiente o en la protección de nuestros datos personales”, afirma Juan Quintanilla, director general de Syntonize.'"
+       "'“Que la tecnología ha cambiado nuesta manera de vivir en el mundo es un hecho. Sin embargo, aún no somos conscientes de las potencialidades de usos de las tecnologías.Por ejemplo, para el año 2025 se espera una verdadera revolución tecnológica, sobre todo enfocado en el\\xa0sector bio-médico\\xa0pero también en las relaciones humanas entre individuos a distancia, en la protección del medio ambiente o en la protección de nuestros datos personales”, afirma Juan Quintanilla, director general de Syntonize.'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "3dbe346f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "d394f5b0",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "'“'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c9f4a5c2",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "'Que la tecnología ha cambiado '"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "194c1691",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'nuestra manera de vivir e interactuar es un hecho'"
+       "'nuesta manera de vivir en el mundo es un hecho'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "8ef6f026",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "'Leer el archivo completo'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "f6cbb482",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
